fix: jd/css/jd_form.css: button of getting verification code not vertically aligned

--- a/jd/css/jd_form.css
+++ b/jd/css/jd_form.css
@@ -9,8 +9,9 @@ div {
 
 li {
 	border: 1px solid gray;
-	height: 50px;
+	height: 46px;
 	margin-bottom: 30px;
+	padding: 2px;
 	width: 400px;
 }
 
